# simpleDeck_V3

./: .gitignore  AGENTS.md  LICENSE  README.md  STATUS.md
desktop/: .gitignore  README.md  pyproject.toml  run.bat  run.sh
desktop/assets/icons/: _gen.py
desktop/assets/themes/: glossy.qss  palette.py
desktop/src/simple_deck/: __init__.py  __main__.py  app.py
desktop/src/simple_deck/core/: __init__.py  app_list_cache.py  event_bus.py  hotkey_dispatcher.py  led_dispatcher.py  migration.py  pot_dispatcher.py  profile.py  profile_manager.py  settings.py  single_instance.py
desktop/src/simple_deck/platform/: __init__.py  audio.py  hotkey.py  window_detector.py  x11_grab.py
desktop/src/simple_deck/transport/: __init__.py  connection_manager.py  hid_device.py  protocol.py  watchdog.py
desktop/src/simple_deck/ui/: __init__.py  main_window.py
desktop/tests/: conftest.py  test_app_list_cache.py  test_app_picker.py  test_filters.py  test_hotkey_async.py  test_hotkey_backend.py  test_hotkey_dispatcher.py  test_led_dispatcher.py  test_migration.py  test_perf_v6.py  test_pot_dispatcher.py  test_profile_flow.py  test_profile_manager.py  test_protocol.py  test_protocol_crc_lut.py  test_settings.py  test_single_instance.py  test_tray.py
desktop/tests/platform/: test_x11_grab.py
desktop/tests/transport/: __init__.py  test_connection_manager.py  test_hid_device.py  test_watchdog.py
desktop/tests/ui/pages/: test_calibration.py  test_led_page.py
desktop/tests/ui/widgets/: test_button_row.py  test_deck_map_reorder.py  test_hotkey_field.py  test_pot_row.py
(+79 files in other folders)
